deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homemanagement
  labels:
    app.kubernetes.io/part-of: homemanagement
