deploy/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hm-broker
  namespace: homemanagement
spec:
  selector:
    app: hm-broker
  ports:
    - port: 8082
      targetPort: http
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hm-auth
  namespace: homemanagement
spec:
  selector:
    app: hm-auth
  ports:
    - port: 8083
      targetPort: http
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hm-web
  namespace: homemanagement
spec:
  selector:
    app: hm-web
  ports:
    - port: 8080
      targetPort: http
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hm-gateway
  namespace: homemanagement
spec:
  selector:
    app: hm-gateway
  ports:
    - port: 8081
      targetPort: http
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hm-agent-gw
  namespace: homemanagement
spec:
  type: LoadBalancer
  selector:
    app: hm-agent-gw
  ports:
    - port: 9444
      targetPort: grpc
      name: grpc
