deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-ingress
  namespace: homemanagement
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: hm.corp.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hm-gateway
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-web
                port:
                  number: 8080
